--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@primeuix/themes": "^1.0.3",
     "@tailwindcss/vite": "^4.1.4",
+    "date-fns": "^4.1.0",
     "primevue": "^4.3.3",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
